[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2.16", features = ["js"] }
ml-dsa = "0.0.4"
rand = "0.8"
ml-kem = "0.2.1"
sha3 = "0.10.8"
