[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly library for post-quantum cryptography including ML-DSA and ML-KEM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/winstonallo/wasm-crypto"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2.16", features = ["js"] }
ml-dsa = "0.0.4"
rand = "0.8"
ml-kem = "0.2.1"
sha3 = "0.10.8"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
